# Saloon

./: Cargo.toml
src/: AI.rs  UI.rs  base.rs  main.rs  space.rs
src/AI/: general.rs  miner.rs  utils.rs
src/base/: camera.rs  settings.rs  timer.rs  velocity.rs
src/space/: anomalies.rs  asteroid.rs  empire.rs  galaxy.rs  inventory.rs  pilot.rs  project.rs  ship.rs  station.rs  weapon.rs
src/space/galaxy/: gates.rs  map.rs  route.rs
src/space/ship/: warp.rs
src/space/weapon/: mining.rs
