[package]
name = "saloon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"
bevy_mod_picking = "0.11.0"
bevy_editor_pls = "0.2.0"
big-brain = "0.16.0"
bevy_mod_debugdump = "0.6.0"
bevy_prototype_debug_lines = "0.9.0"



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3